fixed navbar from covering headers

--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -3,10 +3,11 @@
   --panel-color: rgb(44, 57, 102, 0.5);
   --accent: #b663f8;
   --primary-text: #ffffff;
-  --secondary-text: rgb(134, 151, 184, 0.5);
+  --secondary-text: rgb(134, 151, 184, 0.7);
   --navbar: #1B1A4D;
   --navbar-button: #3B397E;
 }
+
 * {
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
@@ -19,4 +20,5 @@
 html {
   color-scheme: dark;
   scroll-behavior: smooth;
+  scroll-padding-top: 75px;
 }
